--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
     th {
       background-color: #21262d;
     }
-    select, input[type="text"] {
+    select, input[type="text"], input[type="number"], input[type="date"], select, button {
       background-color: #161b22;
       color: #ddd;
       border: 1px solid #30363d;
       padding: 0.3rem;
-      margin: 0.5rem 0;
+      margin: 0.3rem;
+    }
+    button {
+      cursor: pointer;
     }
     section { display: none; }
     section.active { display: block; }
@@ -177,6 +180,38 @@
     <canvas id="performanceChart"></canvas>
   </section>
 
+  <section id="transactions" class="container">
+    <h2>🧾 Transakce</h2>
+
+    <form id="transactionForm">
+      <input type="text" id="ticker" placeholder="Ticker (např. AAPL)" required />
+      <input type="number" id="quantity" placeholder="Počet" required />
+      <input type="number" step="0.01" id="price" placeholder="Cena za kus" required />
+      <input type="date" id="date" required />
+      <select id="type" required>
+        <option value="buy">Nákup</option>
+        <option value="sell">Prodej</option>
+      </select>
+      <button type="submit">Přidat transakci</button>
+    </form>
+
+    <table id="transactionTable">
+      <thead>
+        <tr>
+          <th>Ticker</th>
+          <th>Počet</th>
+          <th>Cena nákupu</th>
+          <th>Typ</th>
+          <th>Datum</th>
+          <th>Aktuální cena</th>
+          <th>Zisk/Ztráta</th>
+          <th>%</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     function showSection(id) {
@@ -192,11 +227,7 @@
       const currency = currencySelect.value;
       values.forEach(cell => {
         const usd = parseFloat(cell.dataset.usd);
-        if (currency === "CZK") {
-          cell.textContent = (usd * exchangeRate).toFixed(2);
-        } else {
-          cell.textContent = usd.toFixed(2);
-        }
+        cell.textContent = currency === "CZK" ? (usd * exchangeRate).toFixed(2) : usd.toFixed(2);
       });
     });
 
@@ -287,6 +318,61 @@
         }
       }
     });
+
+    const transactionForm = document.getElementById("transactionForm");
+    const transactionTable = document.querySelector("#transactionTable tbody");
+    let transactions = JSON.parse(localStorage.getItem("transactions") || "[]");
+
+    async function fetchCurrentPrice(ticker) {
+      try {
+        const response = await fetch(`https://query1.finance.yahoo.com/v7/finance/quote?symbols=${ticker}`);
+        const data = await response.json();
+        return data.quoteResponse.result[0]?.regularMarketPrice || 0;
+      } catch (e) {
+        return 0;
+      }
+    }
+
+    function renderTransactions() {
+      transactionTable.innerHTML = "";
+      transactions.forEach(async (tx, index) => {
+        const currentPrice = await fetchCurrentPrice(tx.ticker);
+        const diff = currentPrice - tx.price;
+        const diffPercent = ((diff / tx.price) * 100).toFixed(2);
+        const profit = (diff * tx.quantity).toFixed(2);
+        const color = diff >= 0 ? "#4caf50" : "#e53935";
+
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${tx.ticker}</td>
+          <td>${tx.quantity}</td>
+          <td>${tx.price}</td>
+          <td>${tx.type}</td>
+          <td>${tx.date}</td>
+          <td>${currentPrice.toFixed(2)}</td>
+          <td style="color:${color}">${profit}</td>
+          <td style="color:${color}">${diffPercent}%</td>
+        `;
+        transactionTable.appendChild(row);
+      });
+    }
+
+    transactionForm.addEventListener("submit", e => {
+      e.preventDefault();
+      const newTx = {
+        ticker: document.getElementById("ticker").value.toUpperCase(),
+        quantity: parseFloat(document.getElementById("quantity").value),
+        price: parseFloat(document.getElementById("price").value),
+        date: document.getElementById("date").value,
+        type: document.getElementById("type").value
+      };
+      transactions.push(newTx);
+      localStorage.setItem("transactions", JSON.stringify(transactions));
+      renderTransactions();
+      transactionForm.reset();
+    });
+
+    renderTransactions();
   </script>
 </body>
 </html>
