--- a/index.html
+++ b/index.html
@@ -471,5 +471,54 @@
 
     renderTransactions();
   </script>
+  <section id="income" class="container">
+  <h2>💸 Pasivní příjem</h2>
+
+  <label for="expenseGoal">Měsíční výdajový cíl (<span id="currencyLabel">USD</span>):</label>
+  <input type="number" id="expenseGoal" value="1000" min="0" />
+
+  <div style="margin-top: 1rem;">
+    <strong>Pokrytí výdajů:</strong>
+    <div id="coverageText">Načítání...</div>
+    <div style="background:#30363d;border-radius:5px;overflow:hidden;margin-top:5px;">
+      <div id="coverageBar" style="background:#00cc66;height:20px;width:0%;text-align:center;color:#fff;font-size:0.9rem;"></div>
+    </div>
+  </div>
+
+  <h3 style="margin-top:2rem;">💼 Zdroj příjmu</h3>
+  <table id="incomeTable">
+    <thead>
+      <tr>
+        <th>Název</th>
+        <th>Měsíční částka</th>
+        <th>Roční částka</th>
+        <th>Akce</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Dividendy</td>
+        <td class="income-month" data-usd="120">120</td>
+        <td class="income-year" data-usd="1440">1440</td>
+        <td><button onclick="removeIncome(this)">🗑</button></td>
+      </tr>
+      <tr>
+        <td>Nájem</td>
+        <td class="income-month" data-usd="400">400</td>
+        <td class="income-year" data-usd="4800">4800</td>
+        <td><button onclick="removeIncome(this)">🗑</button></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div style="margin-top:1rem;">
+    <input type="text" id="incomeName" placeholder="Název příjmu">
+    <input type="number" id="incomeMonthly" placeholder="Měsíční částka">
+    <button onclick="addIncome()">➕ Přidat</button>
+  </div>
+
+  <h3 style="margin-top:2rem;">📊 Graf vývoje pasivního příjmu</h3>
+  <canvas id="incomeChart" height="100"></canvas>
+</section>
 </body>
 </html>
