--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
   </section>
 
   <section id="performance" class="container">
-    <h2>📊 Výkonnost vs S&P 500</h2>
-    <canvas id="performanceChart" height="200"></canvas>
-  </section>
+  <h2>📊 Srovnání s indexem S&P 500</h2>
+  <canvas id="performanceChart" style="margin-bottom: 2rem;"></canvas>
+
+  <h2>📈 Měsíční výkonnost portfolia</h2>
+  <canvas id="monthlyPerformanceChart"></canvas>
+</section>
 
   <section id="dividends" class="container">
     <h2>💵 Historie dividend</h2>
