--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moje investiční portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -33,8 +34,9 @@
       color: #ddd;
       text-decoration: none;
       font-weight: 600;
-      padding: 0.3rem 0.6rem;
+      padding: 0.4rem 0.8rem;
       border-radius: 5px;
+      transition: background-color 0.3s;
     }
     nav a:hover {
       background-color: #30363d;
@@ -43,6 +45,12 @@
       padding: 1rem;
       max-width: 1200px;
       margin: 0 auto;
+    }
+    section {
+      display: none;
+    }
+    section.active {
+      display: block;
     }
     table {
       width: 100%;
@@ -61,13 +69,31 @@
       background-color: #161b22;
       color: #ddd;
       border: 1px solid #30363d;
-      padding: 0.3rem;
+      padding: 0.4rem;
       margin: 0.5rem 0;
+      border-radius: 4px;
     }
-    section { display: none; }
-    section.active { display: block; }
-    .gain { color: #00ff99; }
-    .loss { color: #ff6666; }
+    input[type="submit"], button {
+      background-color: #238636;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      margin-top: 0.5rem;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    input[type="submit"]:hover, button:hover {
+      background-color: #2ea043;
+    }
+    .gain {
+      color: #2ecc71;
+      font-weight: bold;
+    }
+    .loss {
+      color: #e74c3c;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -83,48 +109,94 @@
     <a href="#" onclick="showSection('diversification')">Diversifikace</a>
     <a href="#" onclick="showSection('transactions')">Transakce</a>
     <a href="#" onclick="showSection('watchlist')">Watchlist</a>
-    <a href="#" onclick="showSection('goals')">Cíl</a>
-    <a href="#" onclick="showSection('passive')">Pasivní příjem</a>
+    <a href="#" onclick="showSection('goal')">Cíl</a>
+    <a href="#" onclick="showSection('income')">Pasivní příjem</a>
+    <a href="#" onclick="showSection('property')">Nemovitosti / Dluhy</a>
   </nav>
-  
- <section id="dashboard" class="container active">
-    <h2>📈 Přehled portfolia</h2>
-    <!-- Tvoje tabulka portfolia bude zde -->
-    <p>Sem můžeš doplnit tabulku se svými akciemi a dalšími informacemi.</p>
+
+  <section id="dashboard" class="container active">
+    <h2>📊 Dashboard</h2>
+    <label for="currency">Měna:</label>
+    <select id="currency">
+      <option value="USD">USD</option>
+      <option value="CZK">CZK</option>
+    </select>
+
+    <input type="text" id="search" placeholder="Hledat akcie..." style="float:right;" />
+    <div style="clear:both;"></div>
+
+    <table id="portfolioTable">
+      <thead>
+        <tr>
+          <th>Logo</th>
+          <th>Název</th>
+          <th>Ticker</th>
+          <th>Počet</th>
+          <th>Nákupní cena</th>
+          <th>Aktuální cena</th>
+          <th>Hodnota</th>
+          <th>Změna</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Dynamicky plněno -->
+      </tbody>
+    </table>
   </section>
+   </section>
 
   <section id="calendar" class="container">
     <h2>📅 Dividendový kalendář</h2>
-    <p>Zde bude zobrazen kalendář s blížícími se dividendami.</p>
+    <table id="dividendCalendarTable">
+      <thead>
+        <tr>
+          <th>Ticker</th>
+          <th>Datum výplaty</th>
+          <th>Výše dividendy</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Data se načtou automaticky -->
+      </tbody>
+    </table>
+    <canvas id="dividendChart" style="margin-top:2rem;"></canvas>
   </section>
 
   <section id="performance" class="container">
-  <h2>📊 Srovnání s indexem S&P 500</h2>
-  <canvas id="performanceChart" style="margin-bottom: 2rem;"></canvas>
-
-  <h2>📈 Měsíční výkonnost portfolia</h2>
-  <canvas id="monthlyPerformanceChart"></canvas>
-</section>
+    <h2>📈 Výkonnost portfolia vs S&P 500</h2>
+    <canvas id="performanceChart" style="max-height: 300px;"></canvas>
+    <h3 style="margin-top:2rem;">📊 Měsíční výkonnost</h3>
+    <canvas id="monthlyPerformanceChart"></canvas>
+  </section>
 
   <section id="dividends" class="container">
-    <h2>💵 Historie dividend</h2>
-    <p>Tabulka nebo graf zobrazující přijaté dividendy v čase.</p>
+    <h2>💰 Přehled dividend</h2>
+    <canvas id="totalDividendChart" style="margin-top:1rem;"></canvas>
   </section>
 
   <section id="diversification" class="container">
-    <h2>🌐 Diverzifikace portfolia</h2>
-    <p>Grafické znázornění sektorového a geografického rozložení.</p>
+    <h2>🧬 Diversifikace portfolia</h2>
+    <canvas id="sectorChart" style="max-height:300px;"></canvas>
+    <canvas id="regionChart" style="max-height:300px; margin-top:2rem;"></canvas>
   </section>
 
   <section id="transactions" class="container">
     <h2>🧾 Transakce</h2>
     <form id="transactionForm">
-      <input type="text" id="ticker" placeholder="Ticker (např. AAPL)" required />
-      <input type="number" id="shares" placeholder="Počet akcií" required />
-      <input type="number" id="price" placeholder="Cena za kus (USD)" required />
+      <label>Ticker:</label>
+      <input type="text" id="ticker" required />
+      <label>Počet akcií:</label>
+      <input type="number" id="quantity" required />
+      <label>Cena za kus (USD):</label>
+      <input type="number" step="0.01" id="price" required />
+      <label>Datum nákupu:</label>
       <input type="date" id="date" required />
-      <button type="submit">Přidat transakci</button>
+      <input type="submit" value="Přidat transakci" />
     </form>
+
+    <h3>📂 Import transakcí (CSV)</h3>
+    <input type="file" id="csvUpload" accept=".csv" />
+
     <table id="transactionTable">
       <thead>
         <tr>
@@ -132,24 +204,26 @@
           <th>Počet</th>
           <th>Cena</th>
           <th>Datum</th>
-          <th>Změna</th>
-          <th>Akce</th>
+          <th>Zisk / Ztráta</th>
         </tr>
       </thead>
       <tbody>
-        <!-- Dynamické transakce -->
+        <!-- Transakce -->
       </tbody>
     </table>
   </section>
 
   <section id="watchlist" class="container">
-    <h2>🔔 Watchlist</h2>
-    <form id="watchForm">
-      <input type="text" id="watchTicker" placeholder="Ticker" required />
-      <input type="number" id="targetPrice" placeholder="Cílová cena (USD)" required />
-      <button type="submit">Přidat do Watchlistu</button>
+    <h2>📋 Watchlist</h2>
+    <form id="watchlistForm">
+      <label>Ticker:</label>
+      <input type="text" id="watchTicker" required />
+      <label>Cílová cena (USD):</label>
+      <input type="number" step="0.01" id="targetPrice" required />
+      <input type="submit" value="Přidat do Watchlistu" />
     </form>
-    <table id="watchTable">
+
+    <table id="watchlistTable">
       <thead>
         <tr>
           <th>Ticker</th>
@@ -160,131 +234,132 @@
         </tr>
       </thead>
       <tbody>
-        <!-- Dynamický obsah watchlistu -->
+        <!-- Watchlist -->
+      </tbody>
+    </table>
+  </section>
+  <section id="goal" class="container">
+    <h2>🎯 Cíl investora</h2>
+    <label>Investiční cíl (CZK):</label>
+    <input type="number" id="goalAmount" placeholder="Např. 10000000" />
+    <p>Aktuálně zainvestováno: <span id="investedAmount">0</span> CZK</p>
+    <progress id="goalProgress" value="0" max="100"></progress>
+    <p>Splněno: <span id="goalPercent">0%</span></p>
+  </section>
+
+  <section id="realestate" class="container">
+    <h2>🏠 Nemovitosti a dluhy</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Název</th>
+          <th>Typ</th>
+          <th>Zaplaceno</th>
+          <th>Zbývá splatit</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Garsonka</td>
+          <td>Hypotéka</td>
+          <td>480 000 CZK</td>
+          <td>1 020 000 CZK</td>
+        </tr>
+        <tr>
+          <td>Byt 2+kk</td>
+          <td>Hypotéka</td>
+          <td>750 000 CZK</td>
+          <td>2 250 000 CZK</td>
+        </tr>
       </tbody>
     </table>
   </section>
 
-  <section id="goals" class="container">
-    <h2>🎯 Cíle</h2>
-    <form id="goalForm">
-      <input type="number" id="goalAmount" placeholder="Cíl (CZK)" required />
-      <input type="number" id="currentInvested" placeholder="Zainvestováno (CZK)" required />
-      <button type="submit">Aktualizovat</button>
-    </form>
-    <div id="goalProgress"></div>
-  </section>
-
   <section id="passive" class="container">
     <h2>📈 Pasivní příjem</h2>
-    <canvas id="passiveChart" height="200"></canvas>
+    <p>Měsíční příjem z dividend a pronájmu:</p>
+    <ul>
+      <li>Dividendy: 2 150 CZK</li>
+      <li>Pronájem: 10 000 CZK</li>
+    </ul>
+    <p><strong>Celkem: <span id="totalPassive">12 150 CZK</span></strong></p>
+
+    <canvas id="passiveIncomeChart" style="margin-top:2rem;"></canvas>
   </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-  // Přepínání sekcí
-  function showSection(id) {
-    document.querySelectorAll('section').forEach(s => s.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-  }
+    // Přepínání sekcí
+    function showSection(id) {
+      document.querySelectorAll("section").forEach(s => s.classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+    }
 
-  // TRANSAKCE
-  document.getElementById('transactionForm').addEventListener('submit', e => {
-    e.preventDefault();
-    const ticker = document.getElementById('ticker').value.toUpperCase();
-    const shares = parseFloat(document.getElementById('shares').value);
-    const price = parseFloat(document.getElementById('price').value);
-    const date = document.getElementById('date').value;
+    // Výpočet cíle
+    const goalInput = document.getElementById("goalAmount");
+    const investedSpan = document.getElementById("investedAmount");
+    const progress = document.getElementById("goalProgress");
+    const percentSpan = document.getElementById("goalPercent");
 
-    const table = document.getElementById('transactionTable').querySelector('tbody');
-    const row = document.createElement('tr');
+    goalInput.addEventListener("input", () => {
+      const goal = parseInt(goalInput.value);
+      const invested = 1000000; // načti z dat
+      investedSpan.textContent = invested.toLocaleString() + " CZK";
+      const percent = Math.min(100, (invested / goal) * 100);
+      progress.value = percent;
+      percentSpan.textContent = percent.toFixed(1) + "%";
+    });
 
-    const unrealized = (Math.random() * 20 - 10).toFixed(2);
-    const color = unrealized >= 0 ? 'lightgreen' : 'salmon';
+    // Watchlist logika
+    const watchlistForm = document.getElementById("watchlistForm");
+    const watchlistTable = document.getElementById("watchlistTable").querySelector("tbody");
 
-    row.innerHTML = `
-      <td>${ticker}</td>
-      <td>${shares}</td>
-      <td>${price}</td>
-      <td>${date}</td>
-      <td style="color:${color}">${unrealized}%</td>
-      <td><button onclick="this.closest('tr').remove()">🗑️</button></td>
-    `;
-    table.appendChild(row);
-    e.target.reset();
-  });
+    watchlistForm.addEventListener("submit", async e => {
+      e.preventDefault();
+      const ticker = document.getElementById("watchTicker").value.toUpperCase();
+      const target = parseFloat(document.getElementById("targetPrice").value);
 
-  // WATCHLIST
-  document.getElementById('watchForm').addEventListener('submit', e => {
-    e.preventDefault();
-    const ticker = document.getElementById('watchTicker').value.toUpperCase();
-    const target = parseFloat(document.getElementById('targetPrice').value);
-    const current = +(target + (Math.random() * 40 - 20)).toFixed(2);
-    const diff = +(current - target).toFixed(2);
-    const color = diff > 0 ? 'salmon' : 'lightgreen';
+      const response = await fetch(`https://query1.finance.yahoo.com/v7/finance/quote?symbols=${ticker}`);
+      const data = await response.json();
+      const price = data.quoteResponse.result[0]?.regularMarketPrice || 0;
+      const diff = (price - target).toFixed(2);
+      const row = document.createElement("tr");
 
-    const row = document.createElement('tr');
-    row.innerHTML = `
-      <td>${ticker}</td>
-      <td>${current}</td>
-      <td>${target}</td>
-      <td style="color:${color}">${diff > 0 ? '+' : ''}${diff} USD</td>
-      <td><button onclick="this.closest('tr').remove()">🗑️</button></td>
-    `;
-    document.querySelector('#watchTable tbody').appendChild(row);
-    e.target.reset();
-  });
+      row.innerHTML = `
+        <td>${ticker}</td>
+        <td>${price}</td>
+        <td>${target}</td>
+        <td style="color:${diff >= 0 ? 'red' : 'green'}">${diff}</td>
+        <td><button onclick="this.parentElement.parentElement.remove()">❌</button></td>
+      `;
+      watchlistTable.appendChild(row);
+      watchlistForm.reset();
+    });
 
-  // CÍLE
-  document.getElementById('goalForm').addEventListener('submit', e => {
-    e.preventDefault();
-    const goal = parseFloat(document.getElementById('goalAmount').value);
-    const invested = parseFloat(document.getElementById('currentInvested').value);
-    const percent = Math.min(((invested / goal) * 100).toFixed(2), 100);
-
-    document.getElementById('goalProgress').innerHTML = `
-      <p>Zainvestováno: ${invested.toLocaleString()} CZK z cíle ${goal.toLocaleString()} CZK</p>
-      <div style="background:#333;border-radius:5px;">
-        <div style="width:${percent}%;background:#00ccff;padding:0.5rem;border-radius:5px;color:#000;">
-          ${percent} %
-        </div>
-      </div>
-    `;
-  });
-
-  // PASIVNÍ PŘÍJEM - ukázková data
-  const ctxPassive = document.getElementById("passiveChart").getContext("2d");
-  new Chart(ctxPassive, {
-    type: "bar",
-    data: {
-      labels: ["2025-03", "2025-04", "2025-05", "2025-06", "2025-07"],
-      datasets: [{
-        label: "Pasivní příjem (CZK)",
-        data: [3100, 4200, 5200, 6400, 7200],
-        backgroundColor: "rgba(0, 204, 255, 0.6)"
-      }]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: { labels: { color: "#ddd" } },
-        tooltip: {
-          backgroundColor: "#222",
-          titleColor: "#fff",
-          bodyColor: "#fff"
-        }
+    // Pasivní příjem graf
+    new Chart(document.getElementById("passiveIncomeChart").getContext("2d"), {
+      type: 'line',
+      data: {
+        labels: ["2025-01", "2025-02", "2025-03", "2025-04", "2025-05", "2025-06", "2025-07"],
+        datasets: [{
+          label: "Pasivní příjem (CZK)",
+          data: [7500, 7800, 8200, 8800, 10500, 11700, 12150],
+          borderColor: "#00cc88",
+          backgroundColor: "rgba(0,204,136,0.2)",
+          fill: true,
+          tension: 0.3
+        }]
       },
-      scales: {
-        x: {
-          ticks: { color: "#ccc" },
-          grid: { color: "rgba(255,255,255,0.05)" }
+      options: {
+        scales: {
+          x: { ticks: { color: "#ddd" }, grid: { color: "#222" } },
+          y: { ticks: { color: "#ddd" }, beginAtZero: true }
         },
-        y: {
-          ticks: { color: "#ccc" },
-          grid: { color: "rgba(255,255,255,0.05)" },
-          beginAtZero: true
+        plugins: {
+          legend: { labels: { color: "#ccc" } }
         }
       }
-    }
-  });
-</script>
+    });
+  </script>
 </body>
 </html>
